[package]
name = "cryptospeedah"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = "2.0.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
secp256k1 = { version = "0.27", features = ["recovery"] }
rand = "0.8"
# Para sa server monitoring
warp = "0.3" 
tokio = { version = "1", features = ["full"] }
